# destiny-fashion-polling

./: .gitignore  pyproject.toml
src/: main.py
