[tool.poetry]
name = "destiny-fashion-polling"
version = "0.1.0"
description = ""
authors = ["Andrew Sosa <andrew@andrewsosa.com>"]
packages = [{include = "src"}]



[tool.poetry.dependencies]
python = "^3.10.6"
praw = "^7.6.1"
click = "^8.1.3"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
